<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/back"
        android:text="@string/activity_1_instruction"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="77dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/back"
        android:ems="4"
        android:gravity="center"
        android:hint="@string/Num1"
        android:inputType="numberDecimal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColorHint="#696969"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_conversion_absoluteHeight="62dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <TextView
        android:id="@+id/textView2"
        style="@style/ShadowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/OutOf"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/secondNumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstNumber"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_conversion_absoluteHeight="35dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/back"
        android:ems="4"
        android:gravity="center"
        android:hint="@string/Num2"
        android:inputType="numberDecimal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColorHint="#696969"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_conversion_absoluteHeight="62dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <TextView
        style="@style/ShadowText"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/Represents"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_conversion_absoluteHeight="35dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <TextView
        android:background="@drawable/back"
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/Result"
        android:textColor="#696969"
        android:textIsSelectable="true"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_conversion_absoluteHeight="41dp"
        tools:layout_conversion_absoluteWidth="411dp" />
</android.support.constraint.ConstraintLayout>